Convert to Vue.js app with Tailwind and configurable settings
- Vue 3 + Vite setup with Tailwind CSS
- Componentized: AppStep, AppButton, InAppWarning, useZoomForm composable
- Configurable via config.json (zoom meetingId, contact, locale list)
- config.json.sample as template (config.json gitignored)
- Localization: EN/PH with locale files, document title/lang updates
- Notice step before form with contact message
- Display name format: [Locale] Bro./Sis. Name
- Mobile-first responsive design
- GitHub Pages ready (static build)

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,16 @@
 {
   "langCode": "en",
   "langName": "English",
+  "common": {
+    "language": "Language",
+    "copyError": "Failed to copy link. Please copy it manually.",
+    "pageTitle": "MCGI Zoom Meeting - Join Our Service"
+  },
+  "notice": {
+    "indicator": "NOTICE",
+    "title": "Before You Begin",
+    "message": "If you are joining this Zoom meeting without a password, it is likely you are not authorized to join. Please call {name} at {phone}."
+  },
   "inApp": {
     "header": "Please open this page in your phone browser",
     "step1": "Step 1: Tap the button below to copy this page's link.",
